.kubernetes/k8s_middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: account-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /account
