.kubernetes/k8s_ingress_route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: account
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: PathPrefix(`/account`)
      middlewares:
        - name: account-stripprefix
      priority: 10
      services:
        - kind: Service
          name: account
          port: 80
